main/default/objects/Monitoring_Batch_Flag__c/fields/Last_Created_Log__c.field-meta.xml
<CustomField>
    <fullName>Last_Created_Log__c</fullName>
    <label>Last Created Log</label>
    <type>DateTime</type>
</CustomField>