main/default/objects/Monitoring_Batch_Flag__c/fields/Last_Processed_Log__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_Log__c</fullName>
    <label>Last Processed Log</label>
    <type>DateTime</type>
</CustomField>